--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -8,12 +8,12 @@
   video: https://www.youtube.com/embed/OMfdAwpKIsc
   date: 2020-01-24 00:00:00
 
-- release: serenityy 
-  artists: Bayza & Dimatissss
-  title: Serenityyy
-  cover: serenityyyy
-  genre: Deep Houseee
-  year: 2020
-  description: A track in collaboration with Dimatissss
-  video: https://www.youtube.com/embed/OMfdAwpKIsc
-  date: 2020-01-24 00:00:01
+- release: blossom 
+  artists: Bayza
+  title: Blossom
+  cover: blossom
+  genre: Deep House
+  year: 2019
+  description: Bayza - Blossom [DeepShine Records]
+  video: https://www.youtube.com/embed/oNvLKifFX20
+  date: 2019-12-13 00:00:00
