--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -30,3 +30,14 @@
   label: PalmTherapySounds Records
   video: https://www.youtube.com/embed/japf2Vj4Ohw
   date: 2019-12-11 00:00:00
+
+- release: mirage
+  artists: Bayza
+  title: Mirage
+  cover: mirage
+  genre: Psytrance
+  year: 2019
+  description: Bayza - Mirage
+  label: Bounce United
+  video: https://www.youtube.com/embed/PgVybJcDXTA
+  date: 2019-10-25 00:00:00
