--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -41,3 +41,146 @@
   label: Bounce United
   video: https://www.youtube.com/embed/PgVybJcDXTA
   date: 2019-10-25 00:00:00
+
+- release: genuine
+  artists: Bayza
+  title: Genuine
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 1. Bayza - Genuine (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/CjtFVqtpBVI
+  date: 2019-9-02 00:00:13
+
+- release: delirio
+  artists: Bayza
+  title: Delirio
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 2. Bayza - Delirio (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/fc2jg7iYBdw
+  date: 2019-9-02 00:00:12
+
+- release: romance
+  artists: Bayza
+  title: Romance
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 3. Bayza - Romance (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/uZ3JR7YBLPM
+  date: 2019-9-02 00:00:11
+
+- release: prisma
+  artists: Bayza
+  title: Prisma
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 4. Bayza - Prisma (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/dZi-BEdfM8M
+  date: 2019-9-02 00:00:10
+
+- release: love
+  artists: Bayza
+  title: Love
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 5. Bayza - Love (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/ufP4BtJzNxY
+  date: 2019-9-02 00:00:09
+
+- release: nada
+  artists: Bayza
+  title: Nada
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 6. Bayza - Nada (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/Np8ToFBCmS8
+  date: 2019-9-02 00:00:08
+  
+- release: fell
+  artists: Bayza
+  title: Fell
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 7. Bayza - Fell (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/1_5Gmo63J3o
+  date: 2019-9-02 00:00:07
+
+- release: crescent
+  artists: Bayza
+  title: Crescent
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 8. Bayza - Crescent (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/GCum26Y36j0
+  date: 2019-9-02 00:00:06
+
+- release: praise
+  artists: Bayza
+  title: Praise
+  cover: genuine-album
+  genre: Deep House
+  year: 2019
+  description: 9. Bayza - Praise (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/fErm4Re2Nkw
+  date: 2019-9-02 00:00:05
+
+- release: dive
+  artists: Dimatis & Bayza
+  title: Dive
+  cover: genuine-album
+  genre: Electronic
+  year: 2019
+  description: 10. Dimatis & Bayza - Dive (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/0XBB7YWvHYw
+  date: 2019-9-02 00:00:04
+
+- release: arousal
+  artists: Bayza
+  title: Arousal
+  cover: genuine-album
+  genre: Big Room
+  year: 2019
+  description: 11. Bayza - Arousal (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/HFu3uiyun7Y
+  date: 2019-9-02 00:00:03
+
+- release: over-you
+  artists: Bayza
+  title: Over You
+  cover: genuine-album
+  genre: Minimal Bounce
+  year: 2019
+  description: 12. Bayza - Over You (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/qOc0mwJ8KrA
+  date: 2019-9-02 00:00:02
+
+- release: zephyr
+  artists: Bayza
+  title: Zephyr
+  cover: genuine-album
+  genre: Dance
+  year: 2019
+  description: 13. Bayza - Zephyr (From Genuine Album)
+  label: Bayza
+  video: https://www.youtube.com/embed/grVCfUkqjLs
+  date: 2019-9-02 00:00:02
