--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -56,7 +56,7 @@
 - release: delirio
   artists: Bayza
   title: Delirio
-  cover: genuine-album
+  cover: delirio
   genre: Deep House
   year: 2019
   description: 2. Bayza - Delirio (From Genuine Album)
