--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -6,7 +6,7 @@
   year: 2020
   description: A track in collaboration with Dimatis
   label: Dimatis
-  video: https://www.youtube.com/embed/OMfdAwpKIsc
+  video: OMfdAwpKIsc
   date: 2020-01-24 00:00:00
 
 - release: blossom 
@@ -17,7 +17,7 @@
   year: 2019
   description: Bayza - Blossom
   label: DeepShine Records
-  video: https://www.youtube.com/embed/oNvLKifFX20
+  video: oNvLKifFX20
   date: 2019-12-13 00:00:00
 
 - release: astral 
@@ -28,7 +28,7 @@
   year: 2019
   description: Bayza - Astral
   label: PalmTherapySounds Records
-  video: https://www.youtube.com/embed/japf2Vj4Ohw
+  video: japf2Vj4Ohw
   date: 2019-12-11 00:00:00
 
 - release: mirage
@@ -39,7 +39,7 @@
   year: 2019
   description: Bayza - Mirage
   label: Bounce United
-  video: https://www.youtube.com/embed/PgVybJcDXTA
+  video: PgVybJcDXTA
   date: 2019-10-25 00:00:00
 
 - release: genuine
@@ -50,7 +50,7 @@
   year: 2019
   description: 1. Bayza - Genuine (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/CjtFVqtpBVI
+  video: CjtFVqtpBVI
   date: 2019-9-02 00:00:13
 
 - release: delirio
@@ -61,7 +61,7 @@
   year: 2019
   description: 2. Bayza - Delirio (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/fc2jg7iYBdw
+  video: fc2jg7iYBdw
   date: 2019-9-02 00:00:12
 
 - release: romance
@@ -72,7 +72,7 @@
   year: 2019
   description: 3. Bayza - Romance (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/uZ3JR7YBLPM
+  video: uZ3JR7YBLPM
   date: 2019-9-02 00:00:11
 
 - release: prisma
@@ -83,7 +83,7 @@
   year: 2019
   description: 4. Bayza - Prisma (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/dZi-BEdfM8M
+  video: dZi-BEdfM8M
   date: 2019-9-02 00:00:10
 
 - release: love
@@ -94,7 +94,7 @@
   year: 2019
   description: 5. Bayza - Love (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/ufP4BtJzNxY
+  video: ufP4BtJzNxY
   date: 2019-9-02 00:00:09
 
 - release: nada
@@ -105,7 +105,7 @@
   year: 2019
   description: 6. Bayza - Nada (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/Np8ToFBCmS8
+  video: Np8ToFBCmS8
   date: 2019-9-02 00:00:08
   
 - release: fell
@@ -116,7 +116,7 @@
   year: 2019
   description: 7. Bayza - Fell (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/1_5Gmo63J3o
+  video: 1_5Gmo63J3o
   date: 2019-9-02 00:00:07
 
 - release: crescent
@@ -127,7 +127,7 @@
   year: 2019
   description: 8. Bayza - Crescent (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/GCum26Y36j0
+  video: GCum26Y36j0
   date: 2019-9-02 00:00:06
 
 - release: praise
@@ -138,7 +138,7 @@
   year: 2019
   description: 9. Bayza - Praise (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/fErm4Re2Nkw
+  video: fErm4Re2Nkw
   date: 2019-9-02 00:00:05
 
 - release: dive
@@ -149,7 +149,7 @@
   year: 2019
   description: 10. Dimatis & Bayza - Dive (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/0XBB7YWvHYw
+  video: 0XBB7YWvHYw
   date: 2019-9-02 00:00:04
 
 - release: arousal
@@ -160,7 +160,7 @@
   year: 2019
   description: 11. Bayza - Arousal (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/HFu3uiyun7Y
+  video: HFu3uiyun7Y
   date: 2019-9-02 00:00:03
 
 - release: over-you
@@ -171,7 +171,7 @@
   year: 2019
   description: 12. Bayza - Over You (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/qOc0mwJ8KrA
+  video: qOc0mwJ8KrA
   date: 2019-9-02 00:00:02
 
 - release: zephyr
@@ -182,5 +182,51 @@
   year: 2019
   description: 13. Bayza - Zephyr (From Genuine Album)
   label: Bayza
-  video: https://www.youtube.com/embed/grVCfUkqjLs
+  video: grVCfUkqjLs
   date: 2019-9-02 00:00:02
+
+- release: majestic
+  artists: Bayza
+  title: Majestic
+  cover: majestic
+  genre: Melbourne Bounce
+  year: 2019
+  description: Bayza - Majestic
+  label: Nelation
+  video: Tfphg1sn1jQ
+  date: 2019-8-02 00:00:00
+
+- release: oasis-remix
+  artists: Lionis
+  title: Oasis (Bayza Remix)
+  cover: oasis-remix
+  genre: Minimal Bounce
+  year: 2019
+  description: Lionis - Oasis (Bayza Remix)
+  label: FREE WAV
+  video: uDlypkh80z0
+  date: 2019-4-19 00:00:00
+
+- release: remorse
+  artists: Bayza
+  title: Remorse
+  cover: remorse
+  genre: Minimal Bounce
+  year: 2019
+  description: Bayza - Remorse
+  label: Nelation
+  video: w83ephnGcf0
+  date: 2019-4-11 00:00:00
+
+- release: wisdom
+  artists: Bayza
+  title: Wisdom
+  cover: wisdom
+  genre: Minimal Bounce
+  year: 2019
+  description: Bayza - Remorse
+  label: Nelation
+  video: lyZyYVHYYC4
+  date: 2019-2-13 00:00:00
+
+
