--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -274,3 +274,14 @@
   date: 2020-1-01 00:00:00
   type: Bootlegs/Remixes
 
+- release: everything-i-wanted-bootleg
+  artists: Billie Eilish
+  title: Everything I Wanted (Bayza Bootleg)
+  cover: billie-eilish-remix
+  genre: Deep House
+  year: 2019
+  description: Billie Eilish - Everything I Wanted (Bayza Bootleg)
+  label: 
+  video: 3qsnIMkX3n4
+  date: 2019-11-30 00:00:00
+  type: Bootlegs/Remixes
