--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -285,3 +285,15 @@
   video: 3qsnIMkX3n4
   date: 2019-11-30 00:00:00
   type: Bootlegs/Remixes
+
+- release: look-at-her-now-bootleg
+  artists: Selena Gomez
+  title: Look At Her Now (Bayza Bootleg)
+  cover: selena-gomez-remix
+  genre: Deep House
+  year: 2019
+  description: Selena Gomez - Look At Her Now (Bayza Bootleg)
+  label: 
+  video: qnGaaOWdnVk
+  date: 2019-10-25 00:00:00
+  type: Bootlegs/Remixes
