--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -379,3 +379,15 @@
   date: 2019-06-12 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
+
+- release: not-the-end
+  artists: Bayza
+  title: Not The End
+  cover: not-the-end
+  genre: Big Room
+  year: 2018
+  description: Bayza - Not The End
+  label: Bayza
+  video: 8t4YBIYjIJQ
+  date: 2018-12-21 00:00:00
+  type: Releases
