--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -391,3 +391,99 @@
   video: 8t4YBIYjIJQ
   date: 2018-12-21 00:00:00
   type: Releases
+
+- release: tavern
+  artists: Bayza
+  title: Tavern
+  cover: tavern
+  genre: Minimal Bounce
+  year: 2018
+  description: Bayza - Tavern
+  label: Bayza
+  video: XM8pl7a9qjc
+  date: 2018-11-30 00:00:00
+  type: Releases
+
+- release: delight
+  artists: Bayza
+  title: Delight
+  cover: delight
+  genre: Melbourne Bounce
+  year: 2018
+  description: Bayza - Delight
+  label: Nelation
+  video: vPfMCIzlH-Q
+  date: 2018-09-05 00:00:00
+  type: Releases
+
+- release: abyss
+  artists: Bayza
+  title: Abyss
+  cover: abyss
+  genre: Minimal Bounce
+  year: 2018
+  description: Bayza - Abyss
+  label: Nelation
+  video: Bnqo9sTgrNA
+  date: 2018-06-19 00:00:00
+  type: Releases
+
+- release: timeline-remix
+  artists: Dimatis
+  title: Timeline (Bayza Remix)
+  cover: timeline-remix
+  genre: Melbourne Bounce
+  year: 2018
+  description: Dimatis - Timeline (Bayza Remix)
+  label: Dimatis
+  video: gueXauiEUkM
+  date: 2018-06-13 00:00:00
+  type: Releases
+
+- release: aether
+  artists: Bayza
+  title: Aether
+  cover: aether
+  genre: Melbourne Bounce
+  year: 2018
+  description: Bayza - Aether
+  label: Nelation
+  video: ihtWiAPXhYY
+  date: 2018-05-24 00:00:00
+  type: Releases
+
+- release: endurance
+  artists: Bayza
+  title: Endurance
+  cover: endurance
+  genre: Melbourne Bounce
+  year: 2018
+  description: Bayza - Endurance
+  label: Nelation
+  video: ZzcCuoYjC6Q
+  date: 2018-05-16 00:00:00
+  type: Releases
+
+- release: convergence
+  artists: Bayza
+  title: Convergence
+  cover: convergence
+  genre: Melbourne Bounce
+  year: 2018
+  description: Bayza - Convergence
+  label: Nelation
+  video: QYLnqujS8Uk
+  date: 2018-04-23 00:00:00
+  type: Releases
+
+- release: unchained
+  artists: Bayza
+  title: Unchained
+  cover: unchained
+  genre: Big Room
+  year: 2018
+  description: Bayza - Unchained
+  label: Bayza
+  video: 89-GLf29wiw
+  date: 2018-03-13 00:00:00
+  type: Releases
