New music released

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -487,3 +487,15 @@
   video: 89-GLf29wiw
   date: 2018-03-13 00:00:00
   type: Releases
+
+- release: exaltation
+  artists: Bayza
+  title: Exaltation
+  cover: exaltation
+  genre: Deep House
+  year: 2020
+  description: Bayza - Exaltation
+  label: DeepShine Records
+  video: KvGv1y9rBjM
+  date: 2020-03-20 00:00:00
+  type: Releases
