--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -496,6 +496,6 @@
   year: 2020
   description: Bayza - Exaltation
   label: DeepShine Records
-  video: KvGv1y9rBjM
+  video: yV5G9v3DooE
   date: 2020-03-20 00:00:00
   type: Releases
