--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -499,3 +499,15 @@
   video: yV5G9v3DooE
   date: 2020-03-20 00:00:00
   type: Releases
+
+- release: desires
+  artists: Bayza
+  title: Desires
+  cover: desires
+  genre: Deep House
+  year: 2020
+  description: Bayza - Desires
+  label: DeepShine Records
+  video: 6LJEONn0ofY
+  date: 2020-03-27 00:00:00
+  type: Releases
