--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -508,6 +508,6 @@
   year: 2020
   description: Bayza - Desires
   label: DeepShine Records
-  video: 6LJEONn0ofY
+  video: 9y9Ja8OCfe4
   date: 2020-03-27 00:00:00
   type: Releases
