--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -511,3 +511,16 @@
   video: 9y9Ja8OCfe4
   date: 2020-03-27 00:00:00
   type: Releases
+
+- release: not-my-baby
+  artists: INNA
+  title: Not My Baby (Bayza Bootleg)
+  cover: inna-remix
+  genre: Deep House
+  year: 2020
+  description: INNA - Not My Baby (Bayza Bootleg)
+  label: 
+  video: tio93a68b3Q
+  date: 2020-04-22 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
