new release added

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -524,3 +524,16 @@
   date: 2020-04-22 00:00:00
   type: Bootlegs/Remixes
   link: -bootlegs
+
+- release: desert-rose-enta-omri
+  artists: Noel Kharman
+  title: Desert Rose / انت عمري Mashup (Bayza Remix)
+  cover: noel-remix
+  genre: Deep House
+  year: 2020
+  description: Noel Kharman - Desert Rose / انت عمري Mashup (Bayza Remix)
+  label: 
+  video: ONzjgxLeIw4
+  date: 2020-05-02 00:00:00
+  type: Bootlegs/Remixes
+  link: -bootlegs
