--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -16,7 +16,7 @@
   cover: blossom
   genre: Deep House
   year: 2019
-  description: Bayza - Blossom
+  description: This is my first release under the label 'DeepShine Records'. Hope you like this Oriental Deep House. :)
   label: DeepShine Records
   video: oNvLKifFX20
   date: 2019-12-13 00:00:00
@@ -28,7 +28,7 @@
   cover: astral
   genre: Deep House
   year: 2019
-  description: Bayza - Astral
+  description: This is my first release under the label 'PalmTherapySounds Records'. 
   label: PalmTherapySounds Records
   video: japf2Vj4Ohw
   date: 2019-12-11 00:00:00
@@ -40,7 +40,7 @@
   cover: mirage
   genre: Psytrance
   year: 2019
-  description: Bayza - Mirage
+  description: Trying some Psytrance.
   label: Bounce United
   video: PgVybJcDXTA
   date: 2019-10-25 00:00:00
@@ -494,7 +494,7 @@
   cover: exaltation
   genre: Deep House
   year: 2020
-  description: Bayza - Exaltation
+  description: I present my second release under 'DeepShine Records'. It's called 'Exaltation' and have some Oriental vibes.
   label: DeepShine Records
   video: yV5G9v3DooE
   date: 2020-03-20 00:00:00
@@ -506,7 +506,7 @@
   cover: desires
   genre: Deep House
   year: 2020
-  description: Bayza - Desires
+  description: This is my third release under 'DeepShine Records'. It has pleasant sounds and nice melodies with oriental vibes.
   label: DeepShine Records
   video: 9y9Ja8OCfe4
   date: 2020-03-27 00:00:00
@@ -518,7 +518,7 @@
   cover: inna-remix
   genre: Deep House
   year: 2020
-  description: INNA - Not My Baby (Bayza Bootleg)
+  description: This is a remix for a singer from Romania named 'INNA'. The first time I heard the original song and her voice I loved it and thought it would be nice to remix it.
   label: 
   video: tio93a68b3Q
   date: 2020-04-22 00:00:00
@@ -531,7 +531,7 @@
   cover: noel-remix
   genre: Deep House
   year: 2020
-  description: Noel Kharman - Desert Rose / انت عمري Mashup (Bayza Remix)
+  description: This is a remix for a singer from Lebanon named 'Noel Kharman' who makes Mashups of songs in different languages for youtube. I love his videos and I decided to put my touch on his new mashup 'Desert Roses / انت عمري'
   label: 
   video: ONzjgxLeIw4
   date: 2020-05-02 00:00:00
