--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -531,7 +531,7 @@
   cover: noel-remix
   genre: Deep House
   year: 2020
-  description: This is a remix for a singer from Lebanon named 'Noel Kharman' who makes Mashups of songs in different languages for youtube. I love his videos and I decided to put my touch on his new mashup 'Desert Roses / انت عمري'
+  description: This is a remix for a singer from Lebanon named 'Noel Kharman' who makes Mashups of songs in different languages for youtube. I love his videos and I decided to put my touch on his new mashup 'Desert Roses / انت عمري'.
   label: 
   video: ONzjgxLeIw4
   date: 2020-05-02 00:00:00
