--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -244,7 +244,7 @@
   cover: wisdom
   genre: Minimal Bounce
   year: 2019
-  description: Bayza - Remorse
+  description: Bayza - Wisdom
   label: Nelation
   video: lyZyYVHYYC4
   date: 2019-2-13 00:00:00
