--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -5,7 +5,7 @@
   genre: Deep House
   year: 2020
   description: A track in collaboration with Dimatis
-  label: Dimatis
+  label: 
   video: OMfdAwpKIsc
   date: 2020-01-24 00:00:00
   type: Releases
@@ -53,7 +53,7 @@
   genre: Deep House
   year: 2019
   description: 1. Bayza - Genuine (From Genuine Album)
-  label: Bayza
+  label: 
   video: CjtFVqtpBVI
   date: 2019-9-02 00:00:13
   type: Releases
@@ -65,7 +65,7 @@
   genre: Deep House
   year: 2019
   description: 2. Bayza - Delirio (From Genuine Album)
-  label: Bayza
+  label: 
   video: fc2jg7iYBdw
   date: 2019-9-02 00:00:12
   type: Releases
@@ -77,7 +77,7 @@
   genre: Deep House
   year: 2019
   description: 3. Bayza - Romance (From Genuine Album)
-  label: Bayza
+  label: 
   video: uZ3JR7YBLPM
   date: 2019-9-02 00:00:11
   type: Releases
@@ -89,7 +89,7 @@
   genre: Deep House
   year: 2019
   description: 4. Bayza - Prisma (From Genuine Album)
-  label: Bayza
+  label: 
   video: dZi-BEdfM8M
   date: 2019-9-02 00:00:10
   type: Releases
@@ -101,7 +101,7 @@
   genre: Deep House
   year: 2019
   description: 5. Bayza - Love (From Genuine Album)
-  label: Bayza
+  label: 
   video: ufP4BtJzNxY
   date: 2019-9-02 00:00:09
   type: Releases
@@ -113,7 +113,7 @@
   genre: Deep House
   year: 2019
   description: 6. Bayza - Nada (From Genuine Album)
-  label: Bayza
+  label: 
   video: Np8ToFBCmS8
   date: 2019-9-02 00:00:08
   type: Releases
@@ -125,7 +125,7 @@
   genre: Deep House
   year: 2019
   description: 7. Bayza - Fell (From Genuine Album)
-  label: Bayza
+  label: 
   video: 1_5Gmo63J3o
   date: 2019-9-02 00:00:07
   type: Releases
@@ -137,7 +137,7 @@
   genre: Deep House
   year: 2019
   description: 8. Bayza - Crescent (From Genuine Album)
-  label: Bayza
+  label: 
   video: GCum26Y36j0
   date: 2019-9-02 00:00:06
   type: Releases
@@ -149,7 +149,7 @@
   genre: Deep House
   year: 2019
   description: 9. Bayza - Praise (From Genuine Album)
-  label: Bayza
+  label: 
   video: fErm4Re2Nkw
   date: 2019-9-02 00:00:05
   type: Releases
@@ -161,7 +161,7 @@
   genre: Electronic
   year: 2019
   description: 10. Dimatis & Bayza - Dive (From Genuine Album)
-  label: Bayza
+  label: 
   video: 0XBB7YWvHYw
   date: 2019-9-02 00:00:04
   type: Releases
@@ -173,7 +173,7 @@
   genre: Big Room
   year: 2019
   description: 11. Bayza - Arousal (From Genuine Album)
-  label: Bayza
+  label: 
   video: HFu3uiyun7Y
   date: 2019-9-02 00:00:03
   type: Releases
@@ -185,7 +185,7 @@
   genre: Minimal Bounce
   year: 2019
   description: 12. Bayza - Over You (From Genuine Album)
-  label: Bayza
+  label: 
   video: qOc0mwJ8KrA
   date: 2019-9-02 00:00:02
   type: Releases
@@ -197,7 +197,7 @@
   genre: Dance
   year: 2019
   description: 13. Bayza - Zephyr (From Genuine Album)
-  label: Bayza
+  label: 
   video: grVCfUkqjLs
   date: 2019-9-02 00:00:02
   type: Releases
@@ -387,7 +387,7 @@
   genre: Big Room
   year: 2018
   description: Bayza - Not The End
-  label: Bayza
+  label: 
   video: 8t4YBIYjIJQ
   date: 2018-12-21 00:00:00
   type: Releases
@@ -399,7 +399,7 @@
   genre: Minimal Bounce
   year: 2018
   description: Bayza - Tavern
-  label: Bayza
+  label: Nelation
   video: XM8pl7a9qjc
   date: 2018-11-30 00:00:00
   type: Releases
@@ -435,7 +435,7 @@
   genre: Melbourne Bounce
   year: 2018
   description: Dimatis - Timeline (Bayza Remix)
-  label: Dimatis
+  label: 
   video: gueXauiEUkM
   date: 2018-06-13 00:00:00
   type: Releases
@@ -483,7 +483,7 @@
   genre: Big Room
   year: 2018
   description: Bayza - Unchained
-  label: Bayza
+  label: 
   video: 89-GLf29wiw
   date: 2018-03-13 00:00:00
   type: Releases
