--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -9,7 +9,7 @@
   video: OMfdAwpKIsc
   date: 2020-01-24 00:00:00
   type: Releases
-  duration: 3:17
+  duration: "3:17"
 
 - release: blossom 
   artists: Bayza
